syntax = "proto3";
package v1;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
	info: {
		title: "Sun service";
		version: "1.0";
		contact: {
			name: "go-grpc-http-rest-microservice-tutorial project";
			url: "https://github.com/shanehowearth/planetpositions";
			email: "shane@shanehowearth.com";
        };
    };
    schemes: HTTP;
    consumes: "application/json";
    produces: "application/json";
    responses: {
		key: "404";
		value: {
			description: "Returned when the resource does not exist.";
			schema: {
				json_schema: {
					type: STRING;
				}
			}
		}
	}
};


message SunriseRequest{
	string api = 1;
	double longitude = 2;
	double latitude = 3;
	int32 year = 4;
	int32 month = 5;
	int32 day = 6;
	double hour = 7;
}

message SunriseTime{
	string api = 1;
	int32 year = 2;
	int32 month = 3;
	int32 day = 4;
	double hour = 5;
}

// Service to manage Sun tasks
service SunService {
	// Get sunrise
	rpc GetSunrise(SunriseRequest) returns (SunriseTime){
        option (google.api.http) = {
            get: "v1/sunrise/{longitude}/{latitude}/{date}"
        };
    }
}
